Enabled preview features for Maven
Signed-off-by: Alessandro Villa <alessandro17.villa@mail.polimi.it>